# homework_module_2

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
data/: operations.json
src/: decorators.py  external_api.py  file_reader.py  generators.py  log_config.py  main.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_file_reader.py  test_generators.py  test_modul.py  test_processing.py  test_utils.py
