[project]
name = "pythonproject-10-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Rezilya Stolyarova",email = "rezilek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.0"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.group.def.dependencies]
pytest = "^8.4.1"

[tool.black]
line-length = 119
exclude = '\.git'

[tool.isort]
line_length = 119
known_third_party = []
include_trailing_comma = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
